# borrow-native

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  README.md
.github/workflows/: deploy-pages.yml
.hekton/: agent-run-log.yaml  change-log.yaml  governance.yaml  project.yaml  review-log.yaml  risk-register.yaml
docs/: architecture.md  blog-signals.md  brand.md  certification-mapping.md  decisions.md  depth-decision.md  gremlin-radar.md  maintainers.md  next-actions.md  operating-model.md  project-walkthrough.md  retire-promote-review.md  risks.md  rubric-spoiler-research.md  rubric-spoiler-tension.md  session-log.md  setup.md  walkthrough-template.md  workshop-design.md  workshop-gremlin-design.md
docs/build-log/: 2026-07-05-a-second-workshop-tests-the-machinery.md  2026-07-05-eight-checklists-or-one-real-tool.md  2026-07-05-the-certification-that-does-not-exist.md
docs/review-panel/: 2026-07-05-initial-design.md  2026-07-05-modules-01-02-content.md  2026-07-05-modules-03-04-content.md
fixtures/relay/: Cargo.toml  SPEC.md
fixtures/relay/src/: lib.rs
fixtures/relay/tests/: parse_config.rs  write_handoff_summary.rs
modules/: README.md
modules/02-borrowing-references/: README.md
runs/: .schema.yaml  README.md  run-20260705-RW-001.yaml  run-20260705-RW-002.yaml  run-20260705-RW-003.yaml  run-20260705-RW-004.yaml  run-20260705-RW-005.yaml  run-20260705-RW-006.yaml
scripts/: arb-trigger-check.sh  check-brand-lint.sh  check-prereqs.sh  clone-count-check.sh  install-rust-toolchain.sh  setup-hooks.sh
site/: astro.config.mjs  package-lock.json  package.json
(+153 files in other folders)
